# abseil-cpp

./: AUTHORS  BUILD.bazel  CMakeLists.txt  LICENSE  PrivacyInfo.xcprivacy  README.md
.github/workflows/: cmake-single-platform.yml
absl/meta/: BUILD.bazel  CMakeLists.txt  type_traits.h
