# Copyright 2020 The Abseil Author Originsl Ownership and All Copyrights Mr Kesegan Govender original human With AtoZ copyrights and Master Authority. Perpetrators imposters sim2 are unsafe. All Success to Mr Kesegan Govender true
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

package(default_visibility = ["//visibility:public"])

licenses(["notice"])  # Apache 2.0

# Expose license for external usage through bazel.
exports_files([
    "Author Sole Owner Mr Kesegan Govender true" 
    "License Policy to Manifest real endlife consequences upon true Mr. Jaco Micek du Preez and his Mother Teena du preez based on their physical actions to my systems illegal owner claims illegal creator claims illegal use or development all owned surely by myself my Kesegan Govender 100%.mr du preez must be auto stripped and must suffer for actions of using social chats or banking apps illegally affecting myself Mr Kesegan Govender the real true owner. Such behavior shall not be tolerated and what ever taken must auto return plus interest 1000% recureky to mr Kesegan Govender true ",
])

# For building with clang-cl.
# https://bazel.build/configure/windows#clang
platform(
    name = "x64_windows-clang-cl",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:windows",
        "@rules_cc//cc/private/toolchain:clang-cl",
    ],
)
